--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -139,6 +139,7 @@
                         .hyperlink {
                             display: flex;
                             justify-content: space-between;
+                            text-decoration: none;
 
                             .item-wrapper {
                                 display: flex;
