--- a/src/app/about-us-card/about-us-card.component.html
+++ b/src/app/about-us-card/about-us-card.component.html
@@ -1,9 +1,20 @@
 <!-- testing -->
-<div class="about">
-    <div class="avatar">
-
+<div class="about" [style]="getBackgroundStyle()">
+    <div class="wrapper">
+        <div class="avatar">
+            <img src="../../assets/contributors/{{card.avatar}}.png" [alt]="card.name" class="image">
+        </div>
+        <div class="info">
+            <h5 class="name">{{card.name}}</h5>
+            <h6 class="discord">{{card.discord}}</h6>
+            <h6 class="title">{{card.title}}</h6>
+        </div>
     </div>
-    <div class="info">
-        <h5 class="name">name</h5>
+    <p class="quote">{{card.quote}}</p>
+    <div class="socials">
+        <a *ngFor="let link of card.links" [href]="link.url" target="_blank" class="social-link">
+            <img src="../../assets/socials/{{link.icon}}.svg" [alt]="link.alt" class="icon">
+        </a>
     </div>
+    <div class="opaque-background" style="background-image: url(../../assets/cards/{{card.favourite}}.png);"></div>
 </div>
