--- a/src/app/about-us-card/about-us-card.component.scss
+++ b/src/app/about-us-card/about-us-card.component.scss
@@ -13,6 +13,7 @@
         display: flex;
         align-items: center;
         gap: 8px;
+        z-index: 1;
 
         .avatar {
             .image {
@@ -33,6 +34,7 @@
             display: flex;
             flex-direction: column;
             gap: 6px;
+            z-index: 1;
     
             .name, .discord, .title {
                 margin: unset;
@@ -53,6 +55,7 @@
 
     .quote {
         margin: unset;
+        z-index: 1;
     }
 
     .socials {
