--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,14 @@
       <a routerLink="/home">Mana</a>
     </li>
     <li class="menu-item">
-      <a routerLink="/healing-guide">Healing Guide</a>
+      <a routerLink="/healing-guide">Healing Guide
+        <img src="../../assets/other/chevron-down.svg" class="mycircle">
+      </a>
+      <div class="header-dropdown-menu">
+        <a routerLink="/healing-guide">Guide</a>
+        <a routerLink="">Teams</a>
+        <a routerLink="">Calculator</a>
+      </div>
     </li>
     <li class="menu-item">
       <a routerLink="/unit-page">Teams</a>
@@ -14,7 +21,14 @@
       <a routerLink="/guides">Guides</a>
     </li>
     <li class="menu-item beta">
-      <a routerLink="/units-index">Index</a>
+      <a routerLink="/units-index">Index
+        <img src="../../assets/other/chevron-down.svg" class="mycircle">
+      </a>
+      <div class="header-dropdown-menu">
+        <a routerLink="/units-index">Simulacra</a>
+        <a routerLink="">Matrices</a>
+        <a routerLink="">Relics</a>
+      </div>
       <span class="beta-tag">Beta</span>
     </li>
     <li class="menu-item">
