--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="announcement">
   <div class="announcement-container">
     <img src="../../assets/other/white-check-circle.svg" alt="Check Circle">
-    <span class="announcement-text">0.1 Update Notes - Wait, notes for the devs...? Nonsense...</span>
+    <span class="announcement-text">1.0 Update Notes - Launch! Nan Yin, Raid Guide and more...</span>
   </div>
   <div class="join-discord">
     <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink-container" target="_blank">
