--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,7 +12,7 @@
 
     .main-menu {
         display: flex;
-        gap: 48px;
+        gap: 32px;
         list-style: none;
         margin:0;
         padding:0;
@@ -24,36 +24,47 @@
             cursor: pointer;
             text-decoration: none;
             color: $white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             a {
                 text-decoration: none;
                 color:#f1f1f1;
                 transition: 0.2s ease-out;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                gap: 4px;
 
                 &:hover {
                     color: $link;
                 }
+
+                &:hover + .header-dropdown-menu {
+                    display: flex;
+                }
             }
-            // testing hover underline animation
-            // think this animation should be dropped, its inconsistent with the footer and the footer one is simpler and better
 
-            // &:after {
-            //     content: "";
-            //     position: absolute;
-            //     width: 100%;
-            //     transform: scaleX(0);
-            //     border-radius: 5px;
-            //     height: 2px;
-            //     bottom: 0;
-            //     left: 0;
-            //     background-color: $white;
-            //     transform-origin: bottom right;
-            //     transition: transform 0.25s ease-out;
-            // }
+            .header-dropdown-menu {
+                position: absolute;
+                display: none;
+                flex-direction: column;
+                padding: 16px;
+                gap: 8px;
+                background-color: $content;
+                z-index: 1;
+                top: 36px;
 
-            // &:hover:after {
-            //     transform: scaleX(1);
-            //     transform-origin: bottom left;
-            // }
+                a {
+                    font-size: 16px;
+                    font-weight: 400;
+                }
+
+                &:hover {
+                    display: flex;
+                }
+            }
         }
 
         .beta {
