Make top-level divs of content blocks into sections, implement header dropdown design

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="inner-about-us">
+<section class="inner-about-us">
   <div class="intro">
     <div class="titles">
       <h3 class="title">Mana Sanctuary</h3>
@@ -20,4 +20,4 @@
   <div class="cards">
     <app-about-us-card *ngFor="let card of cards" [card]="card"></app-about-us-card>
   </div>
-</div>
+</section>
