--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,13 +4,29 @@
       <a routerLink="/home">Mana</a>
     </li>
     <li class="menu-item">
-      <a routerLink="/healing-guide">Healing Guide
-        <img src="../../assets/other/chevron-down.svg" class="mycircle">
+      <a>Healing Guide
+        <img src="../../assets/other/chevron-down.svg">
       </a>
       <div class="header-dropdown-menu">
-        <a routerLink="/healing-guide">Guide</a>
-        <a routerLink="">Teams</a>
-        <a routerLink="">Calculator</a>
+        <a routerLink="/healing-guide">
+          <div class="title-tags">
+            <span class="title">Guide</span>
+          </div>
+          <p class="description">truly worthy of a reddit gold</p>
+        </a>
+        <a routerLink="">
+          <div class="title-tags">
+            <span class="title">Teams</span>
+          </div>
+          <p class="description">don't show this to eren he might just MA all over the page</p>
+        </a>
+        <a routerLink="" class="beta">
+          <div class="title-tags">
+            <span class="title">Calculator</span>
+            <span class="beta-tag-dd">Beta</span>
+          </div>
+          <p class="description">when hard coded excel tables just aren't enough for you</p>
+        </a>
       </div>
     </li>
     <li class="menu-item">
@@ -21,13 +37,28 @@
       <a routerLink="/guides">Guides</a>
     </li>
     <li class="menu-item beta">
-      <a routerLink="/units-index">Index
-        <img src="../../assets/other/chevron-down.svg" class="mycircle">
+      <a>Index
+        <img src="../../assets/other/chevron-down.svg">
       </a>
       <div class="header-dropdown-menu">
-        <a routerLink="/units-index">Simulacra</a>
-        <a routerLink="">Matrices</a>
-        <a routerLink="">Relics</a>
+        <a routerLink="/units-index">
+          <div class="title-tags">
+            <span class="title">Simulacra</span>
+          </div>
+          <p class="description">the people of fantasy tower</p>
+        </a>
+        <a routerLink="">
+          <div class="title-tags">
+            <span class="title">Matrices</span>
+          </div>
+          <p class="description">rectangular casino chips</p>
+        </a>
+        <a routerLink="">
+          <div class="title-tags">
+            <span class="title">Relics</span>
+          </div>
+          <p class="description">uhm</p>
+        </a>
       </div>
       <span class="beta-tag">Beta</span>
     </li>
