--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,27 +40,27 @@
   <div class="inner">
     <div class="half visual">
       <div class="wrapper" id="book">
-        <div class="handbook">
-          <!-- TODO: Add href to each handbook -->
+        <a routerLink="" class="handbook">
+          <!-- TODO: Add routerLink to each handbook -->
           <div class="title-container">
             <h5 class="title">Origin of War</h5>
           </div>
-        </div>
-        <div class="handbook">
+        </a>
+        <a routerLink="" class="handbook">
           <div class="title-container">
             <h5 class="title">Void Abyss</h5>
           </div>
-        </div>
-        <div class="handbook">
+        </a>
+        <a routerLink="" class="handbook">
           <div class="title-container">
             <h5 class="title">Challenge Raids</h5>
           </div>
-        </div>
-        <div class="handbook">
+        </a>
+        <a routerLink="" class="handbook">
           <div class="title-container">
             <h5 class="title">F. Clash Evolution</h5>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="half text">
@@ -177,8 +177,8 @@
           </div>
         </div>
         <div class="buttons-block">
-          <a href="teams.html" class="black-white-medium">Teams</a>
-          <a href="calculator.html" class="black-white-medium">Calculator</a>
+          <a routerLink="" class="black-white-medium">Teams</a>
+          <a routerLink="" class="black-white-medium">Calculator</a>
           <!-- TODO: Change both of these to Angular components for the router later -->
         </div>
       </div>
