--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -1,4 +1,4 @@
-<div class="unit-wrapper">
+<section class="unit-wrapper">
   <div class="header-element">
     <div class="unit-avatar">
       <img src="assets/simulacra/lyra_avatar.png">
@@ -14,7 +14,6 @@
         <img src="assets/elements/benediction.png">
         <img src="assets/elements/element_physical.png">
       </div>
-
     </div>
     <div class="unit-stats">
       <div class="top-stats">
@@ -55,13 +54,9 @@
         <img src="assets/effects/buff_buffer.png">
         Buffer
       </div>
-
-
     </div>
-
   </div>
   <div class="body-element">
 
-
   </div>
-</div>
+</section>
