--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -1,4 +1,4 @@
-<div class="inner-index">
+<section class="inner-index">
   <h2 class="title-big-center">Simulacra and Matrices</h2>
   <div class="category-filter">
     <div class="rarity">
@@ -38,4 +38,4 @@
   <div class="all-unit-index">
     <app-unit-card *ngFor="let unit of units" [unit]="unit"></app-unit-card>
   </div>
-</div>
+</section>
