--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -37,8 +37,22 @@
                 align-items: center;
                 gap: 4px;
 
+                .title-tags {
+                    display: flex;
+                    align-items: center;
+                    gap: 4px;
+                }
+
                 &:hover {
                     color: $link;
+
+                    .title-tags {
+                        color: inherit;
+
+                        .beta-tag-dd {
+                            color: #FFFFFF;
+                        }
+                    }
                 }
 
                 &:hover + .header-dropdown-menu {
@@ -55,32 +69,34 @@
                 background-color: $content;
                 z-index: 1;
                 top: 36px;
+                border-radius: 5px;
 
                 a {
                     font-size: 16px;
                     font-weight: 400;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    width: 100%;
+                    padding: 0 0 8px 0;
+                    border-bottom: 1px solid $border;
+
+                    &:last-child {
+                        padding: unset;
+                        border-bottom: unset;
+                    }
+
+                    p {
+                        font-size: 14px;
+                        font-weight: 300;
+                        width: 275px; // yes this is crap but thankfully the mobile version won't have this problem
+                        margin: unset;
+                    }
                 }
 
                 &:hover {
                     display: flex;
                 }
-            }
-        }
-
-        .beta {
-            position: relative;
-
-            .beta-tag {
-                position: absolute;
-                top: -16px;
-                right: -30px;
-                font-size: 10px;
-                font-weight: 600;
-                padding: 2px 10px;
-                border-radius: 15px;
-                // background: linear-gradient(90deg, rgba(18,10,161,1) 0%, rgba(9,137,246,1) 100%); // darker
-                background: linear-gradient(90deg, rgb(88, 91, 185) 0%, rgba(9,137,246,1) 100%); // lighter. crime against humanity honestly
-                text-transform: uppercase;
             }
         }
 
