--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,6 +128,29 @@ main {
     line-height: 1.2;
 }
 
+.beta {
+    position: relative;
+
+    .beta-tag, .beta-tag-dd {
+        position: absolute;
+        top: -16px;
+        right: -30px;
+        font-size: 10px;
+        font-weight: 600;
+        padding: 2px 10px;
+        border-radius: 15px;
+        // background: linear-gradient(90deg, rgba(18,10,161,1) 0%, rgba(9,137,246,1) 100%); // darker
+        background: linear-gradient(90deg, rgb(88, 91, 185) 0%, rgba(9,137,246,1) 100%); // lighter. crime against humanity honestly
+        text-transform: uppercase;
+    }
+
+    .beta-tag-dd {
+        position: unset;
+        top: unset;
+        right: unset;
+    }
+}
+
 @keyframes distort-subtle {
     20% {
         text-shadow: none;
