Standardize some CSS class names, begin work on 404 page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<section class="inner-about-us">
+<section class="main">
   <div class="intro">
     <div class="titles">
       <h3 class="title">Mana Sanctuary</h3>
