--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 </section>
-<section class="landing-main">
+<section class="main">
   <div class="inner">
     <div class="half visual">
       <div class="wrapper" id="book">
@@ -75,7 +75,7 @@
     </div>
   </div>
 </section>
-<section class="landing-main">
+<section class="main">
   <div class="inner">
     <div class="half text">
       <div class="wrapper">
@@ -110,7 +110,7 @@
     </div>
   </div>
 </section>
-<section class="landing-main">
+<section class="main">
   <div class="inner">
     <div class="half visual">
       <div class="wrapper" id="teams">
@@ -195,7 +195,7 @@
     </div>
   </div>
 </section>
-<section class="landing-main">
+<section class="main">
   <div class="inner">
     <div class="discord">
       <span class="subtitle">
