--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -1,4 +1,4 @@
-<section class="unit-wrapper">
+<section class="main">
   <div class="header-element">
     <div class="unit-avatar">
       <img src="assets/simulacra/lyra_avatar.png">
