--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -1,4 +1,4 @@
-<section class="inner-index">
+<section class="main">
   <h2 class="title-big-center">Simulacra and Matrices</h2>
   <div class="category-filter">
     <div class="rarity">
