--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,15 +63,18 @@ main {
 
     app-home {
         width: 100%;
+        margin: 0 0 80px 0;
+        // min-height: 62.5vh;
     }
 
-    app-units-index, app-unit-page, app-guides, app-healing-guide, app-about-us { // with how Angular loads pages, just do this for every main component
+    app-units-index, app-unit-page, app-guides, app-healing-guide, app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
         width: 100%;
+        // min-height: 62.5vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 40px 0 0 0;
+        margin: 40px 0 80px 0;
     }
 }
 
