--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -1,21 +1,24 @@
 @import '../../styles.scss';
 
+.background {
+    background-image: url("../../assets/other/page-not-found-background.webp");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.15;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     position: relative;
-
-    .background {
-        background-image: url("../../assets/other/page-not-found-background.png");
-        width: 100%;
-        background-size: cover;
-        background-position: center;
-        z-index: -1;
-        opacity: 0.15;
-        position: absolute;
-    }
+    margin: 40px 0 80px 0;
 
     .e404 {
         display: flex;
