--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,13 +61,18 @@ main {
     display: flex;
     justify-content: center;
 
+    app-page-not-found {
+        width: 100%;
+        position: relative;
+    }
+
     app-home {
         width: 100%;
         margin: 0 0 80px 0;
         // min-height: 62.5vh;
     }
 
-    app-units-index, app-unit-page, app-guides, app-healing-guide, app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
+    app-units-index, app-unit-page, app-guides, app-healing-guide, app-about-us { // with how Angular loads pages, just do this for every main component
         width: 100%;
         // min-height: 62.5vh;
         display: flex;
