--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -16,25 +16,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 30px;
     width: 100%;
     position: relative;
     margin: 40px 0 80px 0;
 
     .e404 {
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         align-items: center;
-        gap: 60px; // 30 when the stick gets added
 
         .error-code {
             font-size: 240px;
             font-weight: 500;
             margin: unset;
+            padding: 0 20px 0 0;
+            border-right: 2px solid white;
         }
 
         .message {
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            height: 100%;
             gap: 12px;
+            padding: 0 0 0 20px;
+            border-left: 2px solid white;
 
             span {
                 font-size: 32px;
