--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,28 +58,30 @@ a:hover {
 }
 
 main {
+    height: 100%;
     display: flex;
     justify-content: center;
-
-    app-page-not-found {
-        width: 100%;
-        position: relative;
-    }
+    align-items: center;
 
     app-home {
         width: 100%;
         margin: 0 0 80px 0;
-        // min-height: 62.5vh;
     }
 
     app-units-index, app-unit-page, app-guides, app-healing-guide, app-about-us { // with how Angular loads pages, just do this for every main component
         width: 100%;
-        // min-height: 62.5vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         margin: 40px 0 80px 0;
+    }
+
+    app-page-not-found {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
     }
 }
 
