--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -1,11 +1,11 @@
-<section class="main">
+<section class="main" *ngIf="unit">
   <div class="header-element">
     <div class="unit-avatar">
       <img src="assets/simulacra/lyra_avatar.png">
     </div>
     <div class="unit-name-element">
       <div class="unit-name">
-        Lyra
+        {{unit?.name}}
       </div>
       <div class="unit-weapon-name">
         Vesper
