--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -18,30 +18,36 @@
     <div class="unit-stats">
       <div class="top-stats">
         <div *ngIf="unit?.hasAtk" class="stats">
-          <img src="assets/stats/icon_atk.webp" alt="Attack Icon" style="filter: brightness(3);">
+          <img src="assets/stats/icon_atk.webp" alt="Attack Icon" style="filter: brightness(5);">
           <span>ATK</span>
         </div>
         <div *ngIf="unit?.hasHP" class="stats">
-          <img src="assets/stats/icon_hp.webp" alt="HP Icon" style="filter: brightness(3);">
+          <img src="assets/stats/icon_hp.webp" alt="HP Icon" style="filter: brightness(5);">
           <span>HP</span>
         </div>
         <div *ngIf="unit?.hasCrit" class="stats">
-          <img src="assets/stats/icon_crit.webp" alt="Crit Icon" style="filter: brightness(3);">
+          <img src="assets/stats/icon_crit.webp" alt="Crit Icon" style="filter: brightness(5);">
           <span>CRIT</span>
         </div>
         <div *ngIf="unit?.hasRes" class="stats">
-          <img src="assets/stats/icon_res.webp" alt="Resistance Icon" style="filter: brightness(3);">
+          <img src="assets/stats/icon_res.webp" alt="Resistance Icon" style="filter: brightness(5);">
           <span>RES</span>
         </div>
       </div>
       <div class="bottom-stats">
         <div class="stats">
-          <img src="assets/stats/shatter_SS.png" alt="SS Grade">
-          <span>Charge {{unit?.charge}}</span>
+          <span class="grade" *ngIf="unit?.charge <= 7.49">B</span>
+          <span class="grade" *ngIf="unit?.charge >= 7.50 && unit?.charge <= 10.50">A</span>
+          <span class="grade" *ngIf="unit?.charge >= 10.51 && unit?.charge <= 14.00">S</span>
+          <span class="grade" *ngIf="unit?.charge >= 14.01">SS</span>
+          <span class="value">Charge {{unit?.charge}}</span>
         </div>
         <div class="stats">
-          <img src="assets/stats/shatter_SS.png" alt="SS Grade">
-          <span>Shatter {{unit?.shatter}}</span>
+          <span class="grade" *ngIf="unit?.shatter <= 7.49">B</span>
+          <span class="grade" *ngIf="unit?.shatter >= 7.50 && unit?.shatter <= 10.50">A</span>
+          <span class="grade" *ngIf="unit?.shatter >= 10.51 && unit?.shatter <= 14.00">S</span>
+          <span class="grade" *ngIf="unit?.shatter >= 14.01">SS</span>
+          <span class="value">Shatter {{unit?.shatter}}</span>
         </div>
       </div>
     </div>
@@ -54,22 +60,25 @@
   </div>
   <div class="body-element">
     <div class="tabs">
-      <div class="tab active">
+      <div class="tab active" data-tab="profile">
         <img src="assets/other/profile-icon.svg" alt="Profile Icon">
         <span>PROFILE</span>
       </div>
-      <div class="tab">
+      <div class="tab" data-tab="matrix">
         <img src="assets/other/matrix-icon.svg" alt="Matrix Icon">
         <span>MATRIX</span>
       </div>
-      <div class="tab">
+      <div class="tab" data-tab="materials">
         <img src="assets/other/materials-icon.svg" alt="Materials Icon">
         <span>MATERIALS</span>
       </div>
-      <div class="tab">
+      <div class="tab" data-tab="guide">
         <img src="assets/other/guide-icon.svg" alt="Guide Icon">
         <span>GUIDE</span>
       </div>
+    </div>
+    <div class="profile-part">
+      
     </div>
   </div>
 </section>
