--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -60,19 +60,19 @@
   </div>
   <div class="body-element">
     <div class="tabs">
-      <div class="tab active" data-tab="profile">
+      <div class="tab active" (click)="setActiveElement(unit)" [class.active]="activeElement === unit">
         <img src="assets/other/profile-icon.svg" alt="Profile Icon">
         <span>PROFILE</span>
       </div>
-      <div class="tab" data-tab="matrix">
+      <div class="tab" (click)="setActiveElement(unit)" [class.active]="activeElement === unit">
         <img src="assets/other/matrix-icon.svg" alt="Matrix Icon">
         <span>MATRIX</span>
       </div>
-      <div class="tab" data-tab="materials">
+      <div class="tab" (click)="setActiveElement(unit)" [class.active]="activeElement === unit">
         <img src="assets/other/materials-icon.svg" alt="Materials Icon">
         <span>MATERIALS</span>
       </div>
-      <div class="tab" data-tab="guide">
+      <div class="tab" (click)="setActiveElement(unit)" [class.active]="activeElement === unit">
         <img src="assets/other/guide-icon.svg" alt="Guide Icon">
         <span>GUIDE</span>
       </div>
