🧹Cleanup of previous commit, remove unused imports and extra ".active"

--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -60,7 +60,7 @@
   </div>
   <div class="body-element">
     <div class="tabs">
-      <div class="tab active" (click)="setActiveElement(unit)" [class.active]="activeElement === unit">
+      <div class="tab" (click)="setActiveElement(unit)" [class.active]="activeElement === unit">
         <img src="assets/other/profile-icon.svg" alt="Profile Icon">
         <span>PROFILE</span>
       </div>
