Minor addition to menu

--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -84,6 +84,7 @@
         <a class="info" (click)="setActiveInfo($event.target)" #info>Dodge</a>
         <a class="info" (click)="setActiveInfo($event.target)" #info>Skill</a>
         <a class="info" (click)="setActiveInfo($event.target)" #info>Discharge</a>
+        <a class="info" (click)="setActiveInfo($event.target)" #info>Trait</a>
         <div class="underline"></div>
       </div>
 
